<resources>
    <string name="app_name">FoodRecipe</string>

    <!-- Creating a Recipe -->
    <string name="hint_recipeTitle">Recipe Title</string>
    <string name="hint_recipe_description">Recipe Description</string>
    <string name="hint_recipe_ingredients">Recipe Ingredients</string>
    <string name="button_addRecipe">Add Recipe</string>
    <string name="button_addImagee">Add Image</string>
    <string name="hint_recipe_image_description">Recipe Image</string>
    <string name="select_recipe_image">Select recipe image</string>


    <!-- Updating a Recipe -->
    <string name="button_saveRecipe">Save Recipe</string>
    <string name="button_updateImage">Update Image</string>
    <string name="button_deleteRecipe">Delete</string>

    <!-- Action Bar -->
    <string name="menu_addRecipe">Add</string>
    <string name="menu_cancelRecipe">Cancel</string>

    <!-- App Settings Menu -->
    <string name="nav_drawer_open">Open</string>
    <string name="nav_drawer_close">Close</string>

    <!-- Ratings -->
    <string name="addRating">Rating</string>

    <!-- Search -->
    <string name="searchRecipe">Search…</string>

    <!-- Account -->
    <string name="myAccount">My Account</string>
    <string name="myAccountEmail">Email: </string>
    <string name="myAccountDateCreated">Created: </string>
    <string name="myAccountUID">UID: </string>
    <string name="myAccountMyRecipes">My Recipes</string>
</resources>